--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.6",
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "date-fns": "^2.19.0",
+    "firebase": "^8.3.0",
+    "firebase-admin": "^9.5.0",
+    "framer-motion": "^3.10.5",
+    "js-cookie": "^2.2.1",
     "next": "10.0.5",
+    "next-google-fonts": "^2.1.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-hook-form": "^6.15.4",
+    "react-icons": "^4.2.0",
+    "swr": "^0.5.4"
   }
 }
